  library.  Lutok is just what used to be our own utils::lua module,
  but is now distributed separately.

* Renamed the user-specific configuration file from ~/.kyuarc to
  ~/.kyua/kyua.conf for consistency with other files stored in the
  ~/.kyua/ subdirectory.

* Added the db-exec command to directly interact with the store
  database.


Changes in version 0.2
======================

Experimental version released on August 24th, 2011.

The biggest change in this release is the ability for Kyua to run test
programs implemented using different frameworks.  What this means is
that, now, a Kyua test suite can include not only ATF-based test
programs, but also "legacy" (aka plain) test programs that do not use
any framework.  I.e. if you have tests that are simple programs that
exit with 0 on success and 1 on failure, you can plug them in into a
Kyua test suite.

Other than this, there have been several user-visible changes.  The most
important are the addition of the new 'config' and 'debug' subcommands
to the 'kyua' binary.  The former can be used to inspect the runtime
configuration of Kyua after parsing, and the latter is useful to
interact with failing tests cases in order to get more data about the
failure itself.

Without further ado, here comes the itemized list of changes:

* Generalized the run-time engine to support executing test programs
  that implement different interfaces.  Test programs that use the ATF
  libraries are just a special case of this.  (Issue 18.)

* Added support to the engine to run "plain" test programs: i.e. test
  programs that do not use any framework and report their pass/fail
  status as an exit code.  This is to simplify the integration of legacy
  test programs into a test suite, and also to demonstrate that the
  run-time engine is generic enough to support different test
  interfaces.  (Issue 18.)

* Added the 'debug' subcommand.  This command allows end users to tweak